--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,8 @@
-.searchedGif, .translatedGif {
+.trendingGif, .searchedGif, .translatedGif {
     display: flex;
     width: 200px;
     height: 200px;
     background: white;
-    border: 2px solid black;
-    border-radius: 10%;
+    border: 1px solid black;
     background-position: left;
 }
