WIP: CSS-adds bg

--- a/css/style.css
+++ b/css/style.css
@@ -7,4 +7,6 @@
     background-position: left;
 }
 
-
+body{
+    background: url("https://img.freepik.com/free-vector/hand-painted-watercolor-pastel-sky-background_23-2148902771.jpg?w=2000");
+}
