--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,33 @@
-.trendingGif, .searchedGif{
+.bigbox{
     display: flex;
     width: 350px;
     height: 350px;
-    background: white;
     border: 1px solid black;
-    background-position: left;
+    margin: auto;
+}
+
+.trendingGif{
+    background: rgb(238, 250, 248);
+}
+
+.searchedGif{
+    background: rgb(255, 238, 238);
+}
+
+img{
+    max-width: 100%;
+    max-height: 100%;
 }
 
 body{
     background: url("https://img.freepik.com/free-vector/hand-painted-watercolor-pastel-sky-background_23-2148902771.jpg?w=2000");
+    justify-content: center; 
+    text-align: center; 
+    padding: 50px;
+}
+
+strong{
+    color: rgb(79, 121, 185);
+    font-size: 50px;
+    font-family: 'Fredericka the Great', cursive;
 }
