--- a/css/style.css
+++ b/css/style.css
@@ -31,3 +31,10 @@ strong{
     font-size: 50px;
     font-family: 'Fredericka the Great', cursive;
 }
+
+#clear:hover {
+    background-color: rgb(238, 81, 81);
+    border-color: transparent;
+    color:rgb(238, 250, 248);
+    
+}
