--- a/css/style.css
+++ b/css/style.css
@@ -36,5 +36,9 @@ strong{
     background-color: rgb(238, 81, 81);
     border-color: transparent;
     color:rgb(238, 250, 248);
-    
+}
+
+.btn:hover {
+    background-color: darkgrey;
+    border-color: transparent;
 }
