--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,7 @@ img{
 
 body{
     background: url("https://img.freepik.com/free-vector/hand-painted-watercolor-pastel-sky-background_23-2148902771.jpg?w=2000");
+    background-size: cover;
     justify-content: center; 
     text-align: center; 
     padding: 50px;
