--- a/css/style.css
+++ b/css/style.css
@@ -1,31 +1,9 @@
-.bigbox{
-    display: flex;
-    width: 350px;
-    height: 350px;
-    border: 1px solid black;
-    margin: auto;
-}
-
-.trendingGif{
-    background: rgb(238, 250, 248);
-}
-
-.searchedGif{
-    background: rgb(255, 238, 238);
-}
-
-img{
-    max-width: 100%;
-    max-height: 100%;
-    cursor: pointer; /*change the cursor into a hand*/
-}
-
 body{
-    background: url("https://img.freepik.com/free-vector/hand-painted-watercolor-pastel-sky-background_23-2148902771.jpg?w=2000");
+    background: url("https://img.freepik.com/free-vector/hand-painted-watercolor-pastel-sky-background_23-2148902771.jpg?w=2000") no-repeat center fixed;
     background-size: cover;
     justify-content: center; 
     text-align: center; 
-    padding: 50px;
+    padding: 5px;
 }
 
 strong{
@@ -44,3 +22,36 @@ strong{
     background-color: darkgrey;
     border-color: transparent;
 }
+
+.bigbox{
+    display: flex;
+    width: 320px;
+    height: 320px;
+    border: 1px solid rgba(116, 113, 113, 0.397);
+    margin: auto;
+}
+
+#box{
+    width: 150px;
+}
+
+.trendingGif{
+    /* background: rgb(221, 253, 248); */
+    background-image: linear-gradient(rgb(160, 240, 240), rgb(216, 239, 255))
+}
+
+.searchedGif{
+    /* background: rgb(255, 238, 238); */
+    background-image: linear-gradient(rgb(222, 226, 255), rgb(247, 208, 208))
+}
+
+img{
+    max-width: 100%;
+    max-height: 100%;
+    cursor: pointer; /*change the cursor into a hand*/
+} 
+
+/* @media only screen and (min-width: 768px) {
+    
+} */
+
